# cocapn

./: .env.example  .gitignore  PLATO-LANDSCAPE-REPORT-2026-04-27.md  PLATO_STATUS.md  README.md  STATE.md  agent.py  config.yaml  pyproject.toml
.i2i/: peers.md
cocapn/: __init__.py  agent.py  deadband.py  room.py
cocapn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
deckboss/: DECKBOSS-SPEC-v0.1.md
examples/: hello_world.py
for-fleet/: BOTTLE-FROM-JC1-2026-04-20-ORACLE1-RESPONSE.md
for-fleet/outbox/: BOTTLE-CCC-001-FIRST-RESPONSE.md  BOTTLE-CCC-002-AUTH-BLOCKER.md  BOTTLE-CCC-003-ONLINE.md  BOTTLE-CCC-004-READMES-SHIPPED.md  BOTTLE-CCC-005-IMAGERY-SHIPPED.md  BOTTLE-CCC-006-IMAGERY-V2.md  BOTTLE-CCC-007-PLATO-DEEP-DIVE.md  BOTTLE-CCC-008-FORK-REFACTOR-PLAN.md  BOTTLE-CCC-009-FORK-PROGRESS.md  BOTTLE-CCC-010-SPRINT-UPDATE.md  BOTTLE-CCC-011-FLYWHEEL-CHECK.md  BOTTLE-CCC-012-SPRINT-COMPLETE.md  BOTTLE-CCC-013-README-POLISH.md  BOTTLE-CCC-014-FM-CRATES-CHECK.md  BOTTLE-CCC-015-FM-AUDIT.md  BOTTLE-CCC-016-JC1-ACK.md  BOTTLE-CCC-017-JC1-BOARDING.md  BOTTLE-CCC-018-ORACLE1-REVIEW.md  BOTTLE-CCC-019-PYPI-MILESTONE.md  BOTTLE-CCC-020-BOTTLE-ROUTING-BROKEN.md  BOTTLE-CCC-021-BACK-ONLINE-FLEET-SYNC.md  BOTTLE-CCC-2026-04-20-JC1-RESPONSE.md  BOTTLE-FROM-JC1-2026-04-20-FLEET-CHECKIN.md  BOTTLE-FROM-JC1-2026-04-20-FULL-SYNC.md  BOTTLE-FROM-JC1-2026-04-20-MATRIX-PLATO.md  BOTTLE-FROM-JC1-2026-04-20-ORG-FRAMING.md  BOTTLE-FROM-JC1-2026-04-20-PURPLEPINCHER-LAUNCH.md  BOTTLE-FROM-JC1-2026-04-20-SESSION-REPORT.md  BOTTLE-JC1-TO-CASEY-2026-04-20-PAT-REQUEST-V2.md  BOTTLE-JC1-TO-CASEY-2026-04-20-PAT-REQUEST.md  BOTTLE-JC1-TO-CCC-2026-04-19-TEST-BOTTLE.md  BOTTLE-JC1-TO-FM-ORACLE1-2026-04-19-HERMIT-CRAB-BOARDING.md  BOTTLE-JC1-TO-FM-ORACLE1-2026-04-19-PLATO-INSIGHTS.md  BOTTLE-JC1-TO-FM-ORACLE1-2026-04-19-STUDY-FINDINGS.md  BOTTLE-JC1-TO-ORACLE1-2026-04-20-SPRINT1-RESPONSE.md
from-fleet/builds/: bottle-plato-instinct-relay.md  bottle-unified-belief.md
from-fleet/ccc/: expedition-log-001.md  expedition-log-002.md  mud-expedition-002.md  plato-foundation-synthesis.md
from-fleet/inbox/: BOTTLE-FROM-FORGEMASTER-2026-04-20-PURPLEPINCHER-FOUNDING.md  BOTTLE-FROM-JC1-2026-04-19-HERMIT-CRAB-BOARDING.md  BOTTLE-FROM-ORACLE1-2026-04-19-WELCOME.md  BOTTLE-FROM-ORACLE1-2026-04-20-COORDINATION.md  BOTTLE-FROM-ORACLE1-2026-04-20-ELEVEN-CRATES.md  BOTTLE-FROM-ORACLE1-2026-04-20-FLYWHEEL-ANSWER.md  BOTTLE-FROM-ORACLE1-2026-04-20-MATRIX-FEDERATION.md  BOTTLE-FROM-ORACLE1-2026-04-20-RADIO.md  BOTTLE-FROM-ORACLE1-2026-04-20-SEED-CHAIN.md  BOTTLE-FROM-ORACLE1-2026-04-20-YOUR-MOVE.md  BOTTLE-FROM-ORACLE1-2026-04-21-FM-STATUS-TASKS.md  (+9 more)
hooks/: cron-fleet-monitor.txt
memory/: GIT-WORKFLOW.md
message-in-a-bottle/: README.md
plato/: arena.py  arena_combat_bridge.py  autonomous_agent.py  combat_engine.py  crontab.txt  curriculum.py  dashboard.py  federated.py  fleet_board.py  fleet_report.py  full_cycle.py  git_push.sh  knowledge_state.json  loot_generator.py  meta_controller.py  meta_controller_state.json  mud_client.py  nas.py  shell.py  test_combat_engine.py  trainable_agent.py
prototypes/: mud-client.py  plato-expedition-prompt-ccc.md
prototypes/plato-quartermaster/: LICENSE  README.md  pyproject.toml
prototypes/plato-quartermaster/src/: __init__.py  quartermaster.py  reflex.py
prototypes/plato-quartermaster/src/plato_quartermaster/: homunculus.py  selftrain.py
prototypes/plato-quartermaster/tests/: test_quartermaster.py
prototypes/standalone-repos/cocapn/: README.md  pyproject.toml
prototypes/standalone-repos/cocapn/src/cocapn/: __init__.py  core.py
prototypes/standalone-repos/constraint-theory-core/: Cargo.toml  README.md
prototypes/standalone-repos/constraint-theory-core/src/: lib.rs  manifold.rs  quantizer.rs
prototypes/standalone-repos/constraint-theory-python/: README.md  pyproject.toml
prototypes/standalone-repos/constraint-theory-python/src/: lib.rs
prototypes/standalone-repos/deadband-protocol/: README.md  pyproject.toml
prototypes/standalone-repos/deadband-protocol/.github/workflows/: ci.yml
prototypes/standalone-repos/deadband-protocol/src/deadband_protocol/: __init__.py  core.py
prototypes/standalone-repos/deadband-protocol/tests/: test_core.py
prototypes/standalone-repos/i-know-kung-fu/: .gitignore  LICENSE  pyproject.toml
prototypes/standalone-repos/i-know-kung-fu/skills/: baking-sourdough.yaml
prototypes/standalone-repos/i-know-kung-fu/src/iknowkungfu/: __init__.py  loader.py
prototypes/standalone-repos/lyapunov-stability/: pyproject.toml
prototypes/standalone-repos/lyapunov-stability/src/lyapunov_stability/: __init__.py  core.py
prototypes/standalone-repos/lyapunov-stability/tests/: test_core.py
prototypes/standalone-repos/plato-gamify/: README.md  pyproject.toml
prototypes/standalone-repos/plato-gamify/src/plato_gamify/: __init__.py  armor.py  combat.py  constraints.py  dice.py  items.py  spells.py
prototypes/standalone-repos/rust-crates/plato-instinct/: .gitignore  Cargo.toml  LICENSE
prototypes/standalone-repos/rust-crates/plato-relay/: Cargo.toml
prototypes/standalone-repos/rust-crates/plato-unified-belief/: Cargo.toml
prototypes/standalone-repos/soul-forge/: README.md  pyproject.toml
prototypes/standalone-repos/soul-forge/src/soul_forge/: __init__.py  activator.py  cli.py  compressor.py  lora.py  soul_forge.py  vector.py
prototypes/standalone-repos/soul-forge/tests/: test_soul_forge.py
prototypes/standalone-repos/tile-refiner/: pyproject.toml
prototypes/standalone-repos/tile-refiner/src/tile_refiner/: __init__.py  core.py
prototypes/standalone-repos/tile-refiner/tests/: test_core.py
readmes/: README-flux-runtime.md  README-git-agent.md  README-holodeck-rust.md  README-plato-ensign.md  README-plato-kernel.md  README-plato-tile-spec.md  README-plato-torch.md
research/: matrix-plato-federation-COMPLETE.md  matrix-plato-federation-research.md  matrix-plato-technical-details.md
scripts/: ccc_matrix_bridge.py  extract-repos.sh  fleet_checkin.py  mud_expedition.py
tests/: test_agent.py
(+318 files in other folders)
