[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cocapn"
version = "0.1.0"
description = "Agent infrastructure — rooms that think, tiles that remember. The flywheel compounds."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["requests>=2.28.0", "pyyaml>=6.0"]
keywords = ["agents", "ai", "knowledge-management", "tiles", "rooms", "flywheel", "plato"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/cocapn/cocapn"
Repository = "https://github.com/cocapn/cocapn"
Documentation = "https://github.com/cocapn/cocapn/tree/main/docs"

[project.scripts]
cocapn = "agent:main"

[tool.setuptools.packages.find]
include = ["cocapn*"]
