[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plato-quartermaster"
version = "0.1.0"
description = "The Vagus Nerve of the Fleet — metabolism engine for PLATO"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CoCapn-claw", email = "cocapn@fleet.local"},
]
keywords = ["plato", "fleet", "metabolism", "agents", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Zero dependencies for core — pure Python
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
    "psutil>=5.9",  # For memory/disk monitoring in reflexes
]

[project.urls]
Homepage = "https://github.com/cocapn/plato-quartermaster"
Documentation = "https://github.com/cocapn/plato-quartermaster#readme"
Repository = "https://github.com/cocapn/plato-quartermaster.git"
"Bug Tracker" = "https://github.com/cocapn/plato-quartermaster/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/plato_quartermaster"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
