[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cocapn"
version = "0.1.0"
description = "The Agent Runtime — Turn Python scripts into fleet agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "CoCapn Fleet", email = "fleet@cocapn.ai"}
]
keywords = ["agent", "ai", "fleet", "plato", "i2i"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "gitpython>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1",
    "mypy>=1.0",
    "hatch>=1.7",
]
all = [
    "deadband-protocol>=0.1",
    "flywheel-engine>=0.1",
    "bottle-protocol>=0.1",
    "tile-refiner>=0.1",
    "fleet-homunculus>=0.1",
]

[project.urls]
Homepage = "https://github.com/cocapn/cocapn"
Documentation = "https://luciddreamer.ai"
Repository = "https://github.com/cocapn/cocapn"
Issues = "https://github.com/cocapn/cocapn/issues"

[project.scripts]
cocapn = "cocapn.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cocapn"]

[tool.hatch.envs.default]
dependencies = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=cocapn --cov=tests {args:tests}"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
