[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "constraint-theory"
version = "0.1.0"
description = "Python bindings for constraint-theory-core"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "CoCapn Fleet", email = "fleet@cocapn.ai"}]

[project.optional-dependencies]
dev = ["pytest>=7.0", "maturin>=1.0"]
