[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "deadband-protocol"
version = "0.1.0"
description = "Safety validation for AI outputs with priority-ordered constraint checking"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "CoCapn Fleet", email = "fleet@cocapn.ai"}]
keywords = ["safety", "validation", "constraints", "ai", "deadband"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "black>=23.0", "ruff>=0.1"]

[tool.hatch.build.targets.wheel]
packages = ["src/deadband_protocol"]

[tool.pytest.ini_options]
testpaths = ["tests"]
