[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "i-know-kung-fu"
version = "0.1.0"
description = "Skill injection for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "CoCapn Fleet", email = "fleet@cocapn.ai"}]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/iknowkungfu"]
