[build]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=45", "wheel"]

[project]
name = "plato-gamify"
version = "0.1.0"
description = "Gamification layer for PLATO MUD — spells, items, combat as ML mechanics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "cocapn", email = "fleet@cocapn.ai"}
]
keywords = ["mud", "agents", "ml", "gaming", "simulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Multi-User Dungeons (MUD)",
]

dependencies = [
    "numpy>=1.24",
    "pydantic>=2.0",
    "rich>=13.0",
    "networkx>=3.0",
    "scipy>=1.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
plato-gamify = "plato_gamify.cli:main"

[project.urls]
Homepage = "https://github.com/cocapn/plato-gamify"
Repository = "https://github.com/cocapn/plato-gamify"
