[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tile-refiner"
version = "0.1.0"
description = "CoCapn fleet package"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "CoCapn Fleet", email = "fleet@cocapn.ai"}]
keywords = ["cocapn", "fleet", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/tile_refiner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
